Update kotlin & intellij plugins